[package]
name = "ostring_base"
version = "2.0.0"
edition = "2024"
authors = ["weak_cat"]
description = "ostring base crate include some basic function"
license = "MIT"
repository = "https://github.com/Weakcat/ostring_base.git"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["full"] }
sysinfo = "0.34.2"
auto-launch = "0.5.0"
serialport = "4.7.1"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serialport = "4.7.1"