[package]
name = "ostring_base"
version = "2.1.0"
edition = "2024"
authors = ["weak_cat"]
description = "ostring base crate include some basic function"
license = "MIT"
repository = "https://github.com/Weakcat/ostring_base.git"

[dependencies]
anyhow = "1.0.98"
sysinfo = "0.35.2"
auto-launch = "0.5.0"
dirs = "6.0.0"
serialport = "4.7.2"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serialport = "4.7.2"